# scrape-schema

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflow/: test.yml
.github/workflows/: ci.yml
docs/: base_schema.md  callbacks.md  code_comparison.md  examples.md  faq.md  fields.md  hooks.md  howto.md  index.md  schema.md  schema_works.puml  tips_and_tricks.md  tools.md  usage.md
docs/code/: ex_1.py  ex_2.py  ex_3.py  ex_4.py
docs/fields/: custom.md  nested.md  parsel.md  regex.md  schema.md  slax.md  soup.md
docs/reference/: fields.md  schema.md
docs/tutorial/: stdout_parse.md  unofficial_api.md  web_scraper.md
docs/usage/: easy_selector.md  fields.md  logging.md  pre_validation.md  quickstart.md  schema.md  types_intro.md
examples/: basic.py  books_to_scrape.py  callback_field.py  chompjs_ex.py  datalines.py  dict_field.py  example.py  example2.py  hooks.py  nested.py  regex.py  scrapy_crawler.py  soup.py  tables.py  validation.py  validation_2.py
examples/animego/: callbacks.py  main.py  schema.py
examples/cases/: browser.py  curl_bookstoscrape.py  main.go  restapi_adapter.py  schema.py  scrapy_crawler.py  stdin_adapter.py
examples/constructors/: default.py  from_crop_rule.py  from_crop_rule_list.py  from_kwargs.py  from_list.py  from_markup.py
examples/en_wiki_dummy_api/: _http.py  api.py  main.py  models.py
examples/fields/: custom_fields.py  nested.py  parsel_.py  regex.py  regex_no_schema.py  slax.py  slax_no_schema.py  soup.py  soup_no_schema.py  variants.py
examples/hackernews/: callbacks.py  main.py  schema.py
examples/ip_a_stdout/: main.py  schema.py
examples/quotes_to_scrape/: main.py  schema.py
examples/tutorial/: parsel_scrape_xpath.py  stdout_parse.py  web_scrape_parsel_css.py  web_scrape_parsel_xpath.py  web_scrape_slax.py  web_scrape_soup.py
examples/wikipedia/: main.py  schema.py
examples/without_schema_parse/: main.py
experimental/: __init__.py  _typing.py  base.py
experimental/fields/: nested.py  soup.py
scrape_schema/: __init__.py  _base_configs.py  _field_hook.py  _logger.py  _protocols.py  _type_caster.py  _typing.py  base.py  exceptions.py  field.py  field_protocols.py  hooks.py  nested.py  type_caster.py  validator.py
scrape_schema/callbacks/: parsel.py  slax.py  soup.py
scrape_schema/codegen/: __init__.py  codegen.py  constants.py  pydantic.py  utils.py
scrape_schema/codegen/templates/: pydantic.j2  pydantic_sub_model.j2
scrape_schema/factory/: __init__.py
scrape_schema/fields/: __init__.py  mock.py  nested.py  parsel.py  regex.py  slax.py  soup.py
scrape_schema/special_methods/: __init__.py  base.py  methods.py
scrape_schema/tools/: other.py  slax.py  soup.py
scrape_schema2/: __init__.py  _logger.py  _typing.py  base.py  example.py  field.py  nested.py  type_caster.py
scripts/: pypi_upload.sh
tests/: fixtures.py  test_alias.py  test_attr_fields.py  test_both.py  test_callback_field.py  test_constructors.py  test_defaults.py  test_dict_field.py  test_disable_parse.py  test_field_extract.py  test_fields_features.py  test_hooks_storage.py  test_ignore_dunder.py  test_jmespath_field.py  test_multi_field.py  test_nested.py  test_nested_opt.py  test_parsel.py  test_parsel_callbacks.py  test_property_custom.py  test_raw_dl.py  test_re.py  test_regex.py  test_regex_dict.py  test_schema.py  test_schema_meta.py  test_slax.py  test_slax_callbacks.py  test_soup.py  test_soup_callbacks.py  test_spec_methods.py  test_tables.py  test_text_field.py  test_type_caster.py  test_typing.py  test_validator.py
