 [build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrape-schema"
description = "A lightweight library for converting any text (xml, html, plain text, stdout, etc) to python datatypes"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{name="vypivshiy", email=""}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing"
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/vypivshiy/scrape-schema#readme"
Issues = "https://github.com/vypivshiy/scrape-schema/issues"
Source = "https://github.com/vypivshiy/scrape-schema"

[project.optional-dependencies]
selectolax = ["selectolax"]
bs4 = ["bs4"]
all = ["selectolax", "bs4"]


[tool.hatch.version]
path = "scrape_schema/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=scrape_schema --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "scrape_schema/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
